file up to date of 22.01.2021

--- a/src/app/all-components/header/main-menu/main-menu.component.html
+++ b/src/app/all-components/header/main-menu/main-menu.component.html
@@ -30,7 +30,7 @@
   </ion-menu-toggle>
   
   <ion-menu-toggle>
-    <ion-item lines="none" class="ion-no-padding" color="custom">
+    <ion-item lines="none" class="ion-no-padding" color="custom" [routerLink]="['/language']" routerLinkActive="router-link-active">
       <img src="assets/images/m5.png" alt="">
       <ion-label>Language</ion-label>
       <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
