--- a/src/app/all-components/your-finance-content/general-ledger-content/general-ledger-content.component.html
+++ b/src/app/all-components/your-finance-content/general-ledger-content/general-ledger-content.component.html
@@ -4,13 +4,13 @@
       <ion-col size="5">
         <div class="text_box">
           <label for="">From Date</label>
-          <input type="date">
+          <input type="text" placeholder="DD-MM-YYYY">
         </div>
       </ion-col>
       <ion-col size="5">
         <div class="text_box">
           <label for="">From Date</label>
-          <input type="date">
+          <input type="text" placeholder="DD-MM-YYYY">
         </div>
       </ion-col>
       <ion-col size="2">
@@ -23,91 +23,95 @@
 
   <div class="table_details_back">
     <ul class="head">
-        <li>Billed</li>
+        <li> <div class="head_back">Billed</div></li>
         <li>Bill</li>
         <li>RTO / Payment</li>
         <li>PDF</li>
     </ul>
-    <ul class="body">
-      <li>
-        <div class="billed">
-          <span class="blue">17 Jun '20</span><br>
-          <strong>LONDON FASHION Hob</strong><br>
-          Men Black Solid Belt<br>
-          Color Set: Black<br>
-          Invoice ID #1123456
-        </div>
-      </li>
-      <li>
-        <span class="bill"><img src="assets/images/rupee.png" alt="">  26.96</span>
-      </li>
-      <li>
-        <span class="rto"><img src="assets/images/rupee.png" alt="">  26.96</span>
-      </li>
-      <li>
-        <span class="pdf"><ion-icon name="download-outline"></ion-icon></span>
-      </li>
-    </ul>
-    <ul class="body">
-      <li>
-        <div class="billed">
-          <span class="blue">17 Jun '20</span><br>
-          <strong>LONDON FASHION Hob</strong><br>
-          Men Black Solid Belt<br>
-          Color Set: Black<br>
-          Invoice ID #1123456
-        </div>
-      </li>
-      <li>
-        <span class="bill"><img src="assets/images/rupee.png" alt="">  26.96</span>
-      </li>
-      <li>
-        <span class="rto"><img src="assets/images/rupee.png" alt="">  26.96</span>
-      </li>
-      <li>
-        <span class="pdf"><ion-icon name="download-outline"></ion-icon></span>
-      </li>
-    </ul>
-    <ul class="body">
-      <li>
-        <div class="billed">
-          <span class="blue">17 Jun '20</span><br>
-          <strong>LONDON FASHION Hob</strong><br>
-          Men Black Solid Belt<br>
-          Color Set: Black<br>
-          Invoice ID #1123456
-        </div>
-      </li>
-      <li>
-        <span class="bill"><img src="assets/images/rupee.png" alt="">  26.96</span>
-      </li>
-      <li>
-        <span class="rto"><img src="assets/images/rupee.png" alt="">  26.96</span>
-      </li>
-      <li>
-        <span class="pdf"><ion-icon name="download-outline"></ion-icon></span>
-      </li>
-    </ul>
-    <ul class="body">
-      <li>
-        <div class="billed">
-          <span class="blue">17 Jun '20</span><br>
-          <strong>LONDON FASHION Hob</strong><br>
-          Men Black Solid Belt<br>
-          Color Set: Black<br>
-          Invoice ID #1123456
-        </div>
-      </li>
-      <li>
-        <span class="bill"><img src="assets/images/rupee.png" alt="">  26.96</span>
-      </li>
-      <li>
-        <span class="rto"><img src="assets/images/rupee.png" alt="">  26.96</span>
-      </li>
-      <li>
-        <span class="pdf"><ion-icon name="download-outline"></ion-icon></span>
-      </li>
-    </ul>
+    <div>
+      <ul class="body">
+        <li>
+          <div class="billed">
+            <span class="blue">17 Jun '20</span><br>
+            <strong>LONDON FASHION Hob</strong><br>
+            Men Black Solid Belt<br>
+            Color Set: Black<br>
+            Invoice ID #1123456
+          </div>
+        </li>
+        <li>
+          <span class="bill"><img src="assets/images/rupee.png" alt="">  26.96</span>
+        </li>
+        <li>
+          <span class="rto"><img src="assets/images/rupee.png" alt="">  26.96</span>
+        </li>
+        <li>
+          <span class="pdf"><img src="assets/images/pdf.png" alt=""></span>
+        </li>
+      </ul>
+      <ul class="body">
+        <li>
+          <div class="billed">
+            <span class="blue">17 Jun '20</span><br>
+            <strong>LONDON FASHION Hob</strong><br>
+            Men Black Solid Belt<br>
+            Color Set: Black<br>
+            Invoice ID #1123456
+          </div>
+        </li>
+        <li>
+          <span class="bill"><img src="assets/images/rupee.png" alt="">  26.96</span>
+        </li>
+        <li>
+          <span class="rto"><img src="assets/images/rupee.png" alt="">  26.96</span>
+        </li>
+        <li>
+          <span class="pdf"><img src="assets/images/pdf.png" alt=""></span>
+        </li>
+      </ul>
+      <ul class="body">
+        <li>
+          <div class="billed">
+            <span class="blue">17 Jun '20</span><br>
+            <strong>LONDON FASHION Hob</strong><br>
+            Men Black Solid Belt<br>
+            Color Set: Black<br>
+            Invoice ID #1123456<br>
+            <img src="assets/images/return.png" alt="">
+          </div>
+        </li>
+        <li>
+          <span class="bill"><img src="assets/images/rupee.png" alt="">  26.96</span>
+        </li>
+        <li>
+          <span class="rto"><img src="assets/images/rupee.png" alt="">  26.96</span>
+        </li>
+        <li>
+          <span class="pdf"><img src="assets/images/pdf.png" alt=""></span>
+        </li>
+      </ul>
+      <ul class="body">
+        <li>
+          <div class="billed">
+            <span class="blue">17 Jun '20</span><br>
+            <strong>LONDON FASHION Hob</strong><br>
+            Men Black Solid Belt<br>
+            Color Set: Black<br>
+            Invoice ID #1123456
+          </div>
+        </li>
+        <li>
+          <span class="bill"><img src="assets/images/rupee.png" alt="">  26.96</span>
+        </li>
+        <li>
+          <span class="rto"><img src="assets/images/rupee.png" alt="">  26.96</span>
+        </li>
+        <li>
+          <span class="pdf"><img src="assets/images/pdf.png" alt=""></span>
+        </li>
+      </ul>
+    </div>
+    
   </div>
   
 </div>
