--- a/src/app/all-components/your-finance-content/overview-content/overview-content.component.html
+++ b/src/app/all-components/your-finance-content/overview-content/overview-content.component.html
@@ -4,13 +4,13 @@
       <ion-col size="5">
         <div class="text_box">
           <label for="">From Date</label>
-          <input type="date">
+          <input type="text" placeholder="DD-MM-YYYY">
         </div>
       </ion-col>
       <ion-col size="5">
         <div class="text_box">
           <label for="">From Date</label>
-          <input type="date">
+          <input type="text" placeholder="DD-MM-YYYY">
         </div>
       </ion-col>
       <ion-col size="2">
